Added style to my awesome website

--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>DULL_LIVE</title>
 		<meta charset="utf-8">
+		<title>DULL_LIVE</title>
+		<link rel="stylesheet" type = "text/css" href="style.css">
 	</head>
+
 	<body>
-	<h1> Velkommen til DULLs side! </h1>
-	<ul>
-		<li> <a href="#"> Om DULL </a> </li>
-		<li> <a href = "pages/prosjekter.html">Prosjekter </a> </li>
-		<li> <a href = "http://iaeste.no/dull"> Mer kode </a> </li>
-	</ul>
+		<div class="header">
+			<h1 id="overskrift"> Velkommen til DULLs side! </h1>
+			<div class = "navigation">
+				<ul>
+					<li> <a href="#"> Om DULL </a> </li>
+					<li> <a href = "pages/prosjekter.html">Prosjekter </a> </li>
+					<li> <a href = "http://iaeste.no/dull"> Mer kode </a> </li>
+				</ul>
+			</div>
+		</div>
 
-
-	<h2> Hallo hallo </h2>
-	<p> Paragraf </p>
-	<p>HEI HEI</p>
-	<img src="test.jpg" style="width: 1000px">
-	<p>Hei! Min første nettside med tittel!</p>
-	
+		<h2> Dette er ekstremt kult </h2>
+		<div class = "content">
+			<p>HEI HEI</p>
+			<img id="bilde1" src="test.jpg" style="width: 1000px">
+			<p>Hei! Min første nettside med tittel!</p>
+		</div>
 	</body>
 </html>
